done with exceptions..also added another take exception in case there are no cards to take