@@ -2,9 +2,11 @@ package gr.athtech.balas.klondikesolitaireminigame.board;
 
 import gr.athtech.balas.klondikesolitaireminigame.exceptions.addcardsexceptions.IncorrNumOfCardsAdditionException;
 import gr.athtech.balas.klondikesolitaireminigame.exceptions.takecardsexceptions.IncorrNumOfCardsRemovalException;
+import gr.athtech.balas.klondikesolitaireminigame.exceptions.takecardsexceptions.NoCardsToTakeException;
 import gr.athtech.balas.klondikesolitaireminigame.thedeck.Card;
 
 import java.util.ArrayList;
+import java.util.Collections;
 
 public class WasteSlot extends CardsSlot implements BoardCardsSlot{
     private final SlotType slotType;
@@ -34,13 +36,14 @@ public class WasteSlot extends CardsSlot implements BoardCardsSlot{
     }
 
     @Override
-    public ArrayList<Card> takeCards(int numberOfCards) throws IncorrNumOfCardsRemovalException {
-        ArrayList<Card> c=new ArrayList<>();
+    public ArrayList<Card> takeCards(int numberOfCards) throws IncorrNumOfCardsRemovalException, NoCardsToTakeException {
+        if(getCards().isEmpty()){
+            throw new NoCardsToTakeException("No cards to take");
+        }
         if(numberOfCards>1){
             throw new IncorrNumOfCardsRemovalException("Specific Card Slot doesnt support multi-removal");
         }
-        c.add(getCards().get(0));
-        return c;
+        return new ArrayList<Card>(Collections.singletonList(getCards().getFirst()));
     }
 
     @Override
@@ -54,4 +57,5 @@ public class WasteSlot extends CardsSlot implements BoardCardsSlot{
                 "slotType=" + slotType +
                 '}';
     }
+
 }
